@@ -23,6 +23,7 @@ public abstract class Api {
     }
 
     private void onApiLoaded(Api api) {
+        GuildApi.LOGGER.info("{} says {} was loaded", name, api.name);
         if (this.depends(api)) dependencyLoaded();
     }
 
@@ -37,6 +38,7 @@ public abstract class Api {
     private void dependencyLoaded() {
         --missingDeps;
         if (missingDeps == 0) {
+            GuildApi.LOGGER.info("{} ready", name);
             ready();
         }
     }
@@ -56,6 +58,7 @@ public abstract class Api {
 
     public void enable() {
         if (!enabled) {
+            GuildApi.LOGGER.info("enabling {}", name);
             enabled = true;
             NetEvents.LOADED.invoker().interact(this);
         }
