@@ -2,6 +2,7 @@
 - Fixed an issue with guild raid finished requests not being filtered properly
 - Fixed an issue where socket reconnection times out
 - Fixed more messages being incorrectly sent as guild messages
+- Fixed an issue with reloading wynn player info
 
 ### New Features
 - Added mod update reminder
